[workspace]
members = [".", "ffi", "scrypt-ocl", "initializer", "profiler", "service"]

[package]
name = "post-rs"
version = "0.5.2"
edition = "2021"

[lib]
name = "post"

[dependencies]
aes = "0.8.2"
# Take a dependency on cipher to enable block-padding feature
# as `aes` doesn't expose it.
cipher = { version = "*", features = ["block-padding"] }
eyre = "0.6.8"
regex = "1.7.1"
itertools = "0.10.5"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
bytemuck = "1.13.0"
serde_with = { version = "2.2.0", features = ["base64"] }

scrypt-jane = { git = "https://github.com/spacemeshos/scrypt-jane-rs", branch = "main" }
blake3 = "1.3.3"
bitvec = "1.0.1"
rayon = "1.6.1"
rand = "0.8.5"
log = "0.4.17"
randomx-rs = { git = "https://github.com/spacemeshos/randomx-rs", rev = "6f2bf32af7219a5f9ae929c3020242ecc7c6dd6a" }


primitive-types = "0.12.1"
thiserror = "1.0.40"
thread_local = "1.1.7"
mockall = "0.11.4"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.3.0"
rand = "0.8.5"
proptest = "1.1.0"
rstest = "0.18.2"

[target.'cfg(not(windows))'.dev-dependencies]
pprof = { version = "0.12.1", features = ["flamegraph", "criterion"] }

[[bench]]
name = "proving"
harness = false

[[bench]]
name = "pow"
harness = false

[[bench]]
name = "verifying"
harness = false

[profile.release-clib]
inherits = "release"
strip = true
lto = true
rpath = true
