[package]
name = "certifier"
version = "0.7.11"
edition = "2021"

[dependencies]
axum = "0.7.5"
serde = { version = "1.0.205", features = ["derive"] }
tokio = { version = "1.39", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
] }
post-rs = { path = "../" }
serde_with = { version = "3.9.0", features = ["base64", "hex"] }
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
clap = { version = "4.5.13", features = ["derive", "env"] }
hex = "0.4.3"
config = "0.14.0"
secrecy = { version = "0.8.0", features = ["serde"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
rand = "0.8.5"
serde_json = "1.0.122"
base64 = "0.22.1"
axum-prometheus = "0.7.0"
tower = { version = "0.4.13", features = ["limit", "load-shed", "buffer"] }
duration-str = { version = "0.11.2", default-features = false, features = [
    "serde",
    "time",
] }
parity-scale-codec = { version = "3.6.12", features = ["derive", "serde"] }
mockall = "0.13.0"

[dev-dependencies]
axum-test = "15.3.0"
reqwest = { version = "0.12.5", features = ["json"] }
tempfile = "3.8.1"
