[package]
name = "certifier"
version = "0.8.4"
edition = "2021"

[dependencies]
axum = "0.8.1"
serde = { version = "1.0.218", features = ["derive"] }
tokio = { version = "1.43", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
] }
post-rs = { path = "../" }
serde_with = { version = "3.12.0", features = ["base64", "hex"] }
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
clap = { version = "4.5.31", features = ["derive", "env"] }
hex = "0.4.3"
config = "0.15.9"
tracing = { version = "0.1.41", features = ["log"] }
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
rand = "0.8.5"
serde_json = "1.0.140"
base64 = "0.22.1"
axum-prometheus = "0.8.0"
tower = { version = "0.5.2", features = ["limit", "load-shed", "buffer"] }
duration-str = { version = "0.12.0", default-features = false, features = [
    "serde",
    "time",
] }
parity-scale-codec = { version = "3.7.4", features = ["derive", "serde"] }
mockall = "0.13.1"

[dev-dependencies]
axum-test = "17.2.0"
tempfile = "3.18.0"
