[package]
name = "post-cbindings"
version = "0.8.4"
edition = "2021"

[lib]
name = "post"
crate-type = ["staticlib", "cdylib"]

[dependencies]
log = { version = "0.4.22", features = ["std"] }
post-rs = { path = "../" }
scrypt-ocl = { path = "../scrypt-ocl" }

[build-dependencies]
cbindgen = { version = "0.27.0", default-features = false }

[dev-dependencies]
tempfile = "3.14.0"
