[package]
name = "post-cbindings"
version = "0.8.4"
edition = "2021"

[lib]
name = "post"
crate-type = ["staticlib", "cdylib"]

[dependencies]
log = { version = "0.4.26", features = ["std"] }
post-rs = { path = "../" }
scrypt-ocl = { path = "../scrypt-ocl" }

[build-dependencies]
cbindgen = { version = "0.28.0", default-features = false }

[dev-dependencies]
tempfile = "3.18.0"
