[package]
name = "initializer"
version = "0.1.13"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.0"
clap = { version = "4.2.4", features = ["derive"] }
post-rs = { path = "../" }
scrypt-ocl = { path = "../scrypt-ocl" }
rayon = "1.7.0"
eyre = "0.6.8"
rand = "0.8.5"
env_logger = "0.10.0"
