[package]
name = "initializer"
version = "0.8.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.21", features = ["derive"] }
post-rs = { path = "../" }
scrypt-ocl = { path = "../scrypt-ocl" }
rayon = "1.10.0"
eyre = "0.6.12"
rand = "0.8.5"
env_logger = "0.11.5"
