[package]
name = "k2pow-service"
version = "0.8.0"
edition = "2021"

[dependencies]
post-rs = { path="../" }
clap = { version = "4.5.20", features = ["derive", "env"] }
serde_with = "3.11.0"
serde = { version = "1.0.214", features = ["derive", "serde_derive"] }
tokio = { version = "1.41.0", features = ["full"] }
tracing = "0.1.40"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
axum = "0.7.5"
tower-http = {version = "0.6.1", features = ["trace"]}
hex = "0.4.3"
thiserror = "1.0.65"

[dev-dependencies]
axum-test = "16.3.0"
hex = "0.4.3"
mockall = "0.13.0"
