[package]
name = "k2pow-service"
version = "0.8.5"
edition = "2021"

[dependencies]
post-rs = { path="../" }
clap = { version = "4.5.38", features = ["derive", "env"] }
serde_with = "3.12.0"
serde = { version = "1.0.219", features = ["derive", "serde_derive"] }
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
axum = "0.8.4"
tower-http = {version = "0.6.4", features = ["trace"]}
hex = "0.4.3"
thiserror = "2.0.12"

[dev-dependencies]
axum-test = "17.3.0"
hex = "0.4.3"
mockall = "0.13.1"
