[package]
name = "profiler"
version = "0.7.13"
edition = "2021"

[dependencies]
clap = { version = "4.5.18", features = ["derive"] }
env_logger = "0.11.5"
eyre = "0.6.12"
hex = "0.4.3"
libc = "0.2.159"
post-rs = { path = "../" }
rand = "0.8.5"
rayon = "1.10.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"

windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_Security",
] }

[dev-dependencies]
tempfile = "3.13.0"
