[package]
name = "profiler"
version = "0.8.4"
edition = "2021"

[dependencies]
clap = { version = "4.5.30", features = ["derive"] }
env_logger = "0.11.6"
eyre = "0.6.12"
hex = "0.4.3"
libc = "0.2.170"
post-rs = { path = "../" }
rand = "0.8.5"
rayon = "1.10.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.138"

windows = { version = "0.60", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_Security",
] }

[dev-dependencies]
tempfile = "3.17.1"
