[package]
name = "profiler"
version = "0.8.5"
edition = "2021"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
env_logger = "0.11.6"
eyre = "0.6.12"
hex = "0.4.3"
libc = "0.2.172"
post-rs = { path = "../" }
rand = "0.8.5"
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_Security",
] }

[dev-dependencies]
tempfile = "3.20.0"
