[package]
name = "scrypt-ocl"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = "1.13.1"
ocl = { version = "0.19.4", features = ["opencl_version_2_1"] }
thiserror = "1.0.40"
post-rs = { path = "../" }
base64 = "0.21.0"
clap = { version = "4.2.4", features = ["derive"] }

[dev-dependencies]
post-rs = { path = "../" }
