[package]
name = "service"
version = "0.8.2"
edition = "2021"

[[bin]]
name = "post-service"
path = "src/main.rs"

[lib]
name = "post_service"
path = "src/lib.rs"

[dependencies]
post-rs = { path = "../" }
prost = "0.13.3"
tonic = { version = "0.12.3", features = ["tls"] }
tokio = { version = "1.41", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
] }
tokio-stream = { version = "0.1", features = ["net"] }
log = "0.4.22"
eyre = "0.6.12"
env_logger = "0.11.5"
clap = { version = "4.5.20", features = ["derive"] }
hex = "0.4.3"
mockall = "0.13.0"
sysinfo = "0.32.0"
axum = "0.7.7"
serde = { version = "1.0.215", features = ["derive"] }
range-set = "0.0.11"
serde_with = { version = "3.11.0", features = ["hex"] }
serde_json = "1.0.133"
http = "1.1.0"

[build-dependencies]
tonic-build = "0.12.3"

[dev-dependencies]
async-stream = "0.3.6"
httpmock = "0.7.0"
axum-test = "16.3.0"
rcgen = "0.12.1"
rstest = "0.22.0"
tempfile = "3.14.0"
