[package]
name = "service"
version = "0.8.4"
edition = "2021"

[[bin]]
name = "post-service"
path = "src/main.rs"

[lib]
name = "post_service"
path = "src/lib.rs"

[dependencies]
post-rs = { path = "../" }
prost = "0.13.4"
tonic = { version = "0.12.3", features = ["tls"] }
tokio = { version = "1.43", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
] }
tokio-stream = { version = "0.1", features = ["net"] }
log = "0.4.25"
eyre = "0.6.12"
env_logger = "0.11.6"
clap = { version = "4.5.27", features = ["derive"] }
hex = "0.4.3"
mockall = "0.13.1"
sysinfo = "0.33.1"
axum = "0.8.1"
serde = { version = "1.0.217", features = ["derive"] }
range-set = "0.0.11"
serde_with = { version = "3.12.0", features = ["hex"] }
serde_json = "1.0.137"
http = "1.2.0"

[build-dependencies]
tonic-build = "0.12.3"

[dev-dependencies]
async-stream = "0.3.6"
httpmock = "0.7.0"
axum-test = "17.1.0"
rcgen = "0.12.1"
rstest = "0.24.0"
tempfile = "3.14.0"
