[package]
name = "service"
version = "0.8.5"
edition = "2021"

[[bin]]
name = "post-service"
path = "src/main.rs"

[lib]
name = "post_service"
path = "src/lib.rs"

[dependencies]
post-rs = { path = "../" }
prost = "0.13.5"
tonic = { version = "0.13.0", features = ["tls-ring"] }
tokio = { version = "1.44", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
] }
tokio-stream = { version = "0.1", features = ["net"] }
log = "0.4.27"
eyre = "0.6.12"
env_logger = "0.11.6"
clap = { version = "4.5.32", features = ["derive"] }
hex = "0.4.3"
mockall = "0.13.1"
sysinfo = "0.34.1"
axum = "0.8.3"
serde = { version = "1.0.219", features = ["derive"] }
range-set = "0.0.11"
serde_with = { version = "3.12.0", features = ["hex"] }
serde_json = "1.0.140"
http = "1.3.1"

[build-dependencies]
tonic-build = "0.13.0"

[dev-dependencies]
async-stream = "0.3.6"
httpmock = "0.7.0"
axum-test = "17.2.0"
rcgen = "0.13.2"
rstest = "0.25.0"
tempfile = "3.19.1"
